add screenshot preview

--- a/index.html
+++ b/index.html
@@ -10,16 +10,16 @@
     </head>
     <body>
         <script type="text/javascript" src="ratings_over_n.js"></script>
-        <h2>Yelp! ratings as review number increases</h2>
         <div id="header-container">
           <div id="header">
+            <h2>Yelp! ratings as review number increases</h2>
             <img id="logo" src="data/yelp_logo.jpg" alt="Yelp!" />
             <br/><br/>
             I was interested in the number of Yelp reviews necessary before an average rating
             accurately reflects the <span class="emph">stabilized </span> average rating. Using Yelp's
             <a href="https://www.yelp.com/academic_dataset">academic dataset</a> I filtered for businesses
             which had <span class="emph">&gt;500 reviews</span> and looked at 
-            cumulative averages as review counts increased. 
+            cumulative averages as review counts increased over time. 
             <br/><br/>
             Each line in the meta plot represents a single business and illustrates how its rating has
             changed as a function of reviews, compared to the eventual <span class="emph">stabilized</span> rating.
